<resources>
    <string name="app_name">Chronos</string>
    <string name="load_activity">登录</string>
    <string name="all_event">当日计划</string>
    <string name="study_list">自习列表</string>
    <string name="daily_list">日常列表</string>
    <string name="add">添加事项</string>


    <string name="incorrect_toast">密码错误</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>

    <string name="course_name">课程名字</string>
    <string name="course_start">开始时间</string>
    <string name="course_classroom">上课教室</string>

    <string name="crime_list_freetime_text">今日空闲时间</string>


    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">请输入事件名称</string>
    <string name="crime_useminute_text">预计花费时间</string>
    <string name="crime_useminute_hint">请输入花费时间(分钟)</string>
    <string name="crime_title_label">标题</string>
    <string name="crime_details_label">时间</string>
    <string name="crime_solved_label">已完成</string>
    <string name="date_picker_title">事件日期:</string>
    <string name="time_picker_title">事件时间：</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">计划数目</string>
    <string name="hide_subtitle">隐藏</string>
    <string name="subtitle_format">%1$s 项自习</string>

    <string name="course_time">课程安排</string>
    <string name="course_time_button">所有课程</string>
    <string name="course_time_text">暂无课程安排</string>
    <string name="study_time">自习安排</string>
    <string name="study_time_text">暂无自习计划</string>
    <string name="study_time_button">详情</string>
    <string name="meeting_time">开会时间</string>
    <string name="meeting_time_text">15:50   WM1106   班级会议</string>
    <string name="meeting_time_button">添加会议</string>
    <string name="daily_time">其余安排</string>
    <string name="daily_time_button">详情</string>
    <string name="daily_time_text">暂无其余安排</string>

    <string name="lastWeek">上一周</string>
    <string name="nextWeek">下一周</string>
    <string name="back">返回</string>
    <string name="delCourse">删除课程</string>

</resources>
