<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="会议主题"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/meeting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="请输入会议主题"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="会议地点"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/meeting_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="请输入会议地点"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_time_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginLeft="18dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_select_time_button"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="选择时间"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_save"
            android:text="@string/save"
            android:layout_marginRight="100dp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_cancel"
            android:text="@string/delete"
            />
    </LinearLayout>

</LinearLayout>